test/libsolidity/syntaxTests/storageLayoutSpecifier/multi_token_expression.sol
contract C layout at 5 minutes { }
contract D layout at 2 gwei { }
// ----
// UnimplementedFeatureError 1834: (0-34): Code generation is not supported for contracts with specified storage layout base.
